Fixed bug 449566 cairo-qpainter-surface.cpp fails to compile with gcc 4.3.x, r=pavlov